--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,31 @@
-body {
-    text-align: center;
+html, body, input, select{
+    font-family: 'Exo', sans-serif;    
+}
+
+html, body {
+    font-family: 'Exo', sans-serif;
+    margin: 0;
+    padding: 0; 
 }
 
 h1 {
-    font-family: Monoton;
+    font-family: 'Exo', sans-serif;    
     font-size: 70px;
-    margin: 0.2em;
+    line-height: 1.5em;
+    margin: 0;
     color: white;
+    text-align: center;
     background: #F44336;    
 }
 
 h2 {
-    margin: 1em 0 0.25em;
-    font-style: italic;
+    margin: 0 0 0.5em;
     color: red;    
 }
 
 h2:first-of-type {
     margin-top: 0.5em;
     color: red;
-    font-style: italic;
 }
 
 #colorPicker{
@@ -27,14 +33,10 @@ h2:first-of-type {
     width: 100px;
 }
 
-#sizePicker{
-    color: blue;
-}
-
 table,
 tr,
 td {
-    border: 1px solid black;
+    border: 1px solid #999;
 }
 
 table {
@@ -50,6 +52,47 @@ td {
     width: 20px;
 }
 
-input[type=number] {
-    width: 6em;
+#sizePicker{
+    box-sizing: border-box;
+    float: left;
+    width: 20%;
+    padding: 20px;
+}
+
+.canvas-holder{
+    box-sizing: border-box;  
+    float: left;
+    padding: 20px;
+    text-align: center;
+    width: 80%;
+}
+
+label{
+    cursor: pointer;
+    display: block;
+    margin: 0 0 10px;
+    text-align: left;
+    width: 100%;
+}
+input {
+    background-color: #ffffff;
+    border: solid 1px #cccccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    color: #7e8fa4;
+    font-size: 15px;
+    height: 50px;
+    margin: 0 0 30px;
+    outline: none;
+    padding: 10px;
+    width: 100%;
+}
+
+#submit_button{
+    color: #ffffff;
+    background: #F44336;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    height: 50px;
 }
